force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/BMCServiceDesk__SYSTabFieldsInfo__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the fields in a tab.</description>
    <label>Tab Fields Info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSTabFieldsInfos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>