force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/fields/BMCServiceDesk__columnSequence__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__columnSequence__c</fullName>
    <label>Column Sequence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>