force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/fields/BMCServiceDesk__columnWidth__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__columnWidth__c</fullName>
    <label>Column Width</label>
    <length>10</length>
    <type>Text</type>
</CustomField>