force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/fields/BMCServiceDesk__fieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__fieldAPIName__c</fullName>
    <description>For querying data</description>
    <label>Field API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>