force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>BMCServiceDesk__fieldAPIName__c</columns>
    <columns>BMCServiceDesk__SYSTabInfo__c</columns>
    <columns>BMCServiceDesk__columnSequence__c</columns>
    <columns>BMCServiceDesk__columnWidth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>