force-app/main/default/objects/BMCServiceDesk__SYSTabFieldsInfo__c/listViews/BMCServiceDesk__All1.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>